--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -78,7 +78,7 @@ main.class=casino.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_25
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
